obteniendo datos de la api de spotify

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div class="card-columns">
+  <div class="card" *ngFor="let canciones of nuevasCanciones">
+    <img [src]="canciones.images[0].url" class="card-img-top" alt="..." />
+    <div class="card-body">
+      <h5 class="card-title">{{ canciones.name }}</h5>
+      <p class="card-text">
+        <span
+          *ngFor="let artista of canciones.artists"
+          class="badge badge-primary"
+          >{{ artista.name }}
+        </span>
+      </p>
+    </div>
+  </div>
+</div>
