--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,20 @@
-<p>search works!</p>
+<div class="row">
+  <div class="col">
+    <input
+      #termino
+      type="text"
+      (keyup)="buscar(termino.value)"
+      class="form-control"
+      placeholder="Buscar cancion..."
+    />
+  </div>
+</div>
+
+<div class="card-columns mt-4">
+  <div class="card" *ngFor="let resultado of buscador">
+    <img [src]="resultado.images[0].url" class="card-img-top" alt="..." />
+    <div class="card-body">
+      <h5 class="card-title">{{ resultado.name }}</h5>
+    </div>
+  </div>
+</div>
