--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -12,7 +12,7 @@
 
 <div class="card-columns mt-4">
   <div class="card" *ngFor="let resultado of buscador">
-    <img [src]="resultado.images[0].url" class="card-img-top" alt="..." />
+    <img [src]="resultado.images | noimage" class="card-img-top" alt="..." />
     <div class="card-body">
       <h5 class="card-title">{{ resultado.name }}</h5>
     </div>
