obteniendo datos por url en artista

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -5,7 +5,7 @@
       type="text"
       (keyup)="buscar(termino.value)"
       class="form-control"
-      placeholder="Buscar cancion..."
+      placeholder="Buscar artista..."
     />
   </div>
 </div>
