--- a/src/app/components/tarjetas/tarjetas.component.html
+++ b/src/app/components/tarjetas/tarjetas.component.html
@@ -1,5 +1,5 @@
 <div class="card-columns m-4">
-    <div class="card" *ngFor="let item of items">
+    <div (click)="verArtista(item)" class="card puntero" *ngFor="let item of items">
       <img [src]="item.images | noimage" class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title">{{ item.name }}</h5>
