--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -1,1 +1,44 @@
-<p>artista works!</p>
+<app-loading *ngIf="loading"></app-loading>
+<div class="row animated fadeIn" *ngIf="!loading">
+  <div class="col-2">
+    <img
+      [src]="artista.images | noimage"
+      class="img-thumbnail img-circle"
+      alt="img"
+    />
+  </div>
+  <div class="col">
+    <h3>{{ artista.name }}</h3>
+    <p>
+      <a [href]="artista.external_urls.spotify" target="_blank"
+        >Ir a la página del artista</a
+      >
+    </p>
+  </div>
+  <div class="col4 text-right">
+    <button routerLink="/home" class="btn btn-outline-danger">regresar</button>
+  </div>
+</div>
+
+<div class="row mt-5">
+  <div class="col">
+    <table class="table table-dark">
+      <thead>
+        <tr>
+          <th>Foto</th>
+          <th>Album</th>
+          <th>Cancion</th>
+          <th>Vista previa</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let topTrack of topTracks">
+          <td><img [src]="topTrack.album.images | noimage" alt="{{topTrack.nme}}" class="img-thumb"></td>
+          <td>{{topTrack.album.name}}</td>
+          <td>{{topTrack.name}}</td>
+          <td><audio [src]="topTrack.preview_url" controls></audio></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
