--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,8 @@
 <app-loading *ngIf="loading"></app-loading>
 
+<div class="alert alert-danger animated fadeIn" *ngIf="error">
+  <h3>Error</h3>
+  <p>{{ mensajeError }}</p>
+</div>
+
 <app-tarjetas *ngIf="!loading" [items]="nuevasCanciones"></app-tarjetas>
